# homebrew-cmdict

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  poet.yml  publish.yml  tests.yml
.github/workflows/scripts/: check-labels.js
Formula/: cmdict-basic.rb  cmdict.rb
